# circuitricity

./: .gitignore  .gitpod.yml  Cargo.toml  README.md
.github/workflows/: build.yml
no_std_test/: Cargo.toml
notes/art_of_electronics/: c01.txt
notes/video_lecture_notes/: s02_l06_CurrentVoltage.txt
src/: basic.rs  lib.rs  tests.rs
tests/: test.rs
