[package]
name = "circuitricity"
version = "0.1.0"
edition = "2021"
authors = ["Skareeg Xigmatec"]
description = "Rust crate for various circuit simulations."
readme = "README.md"
license = "MIT OR Apache-2.0"
include = ["/src/**/*", "/Cargo.toml", "/README.md", "LICENSE*"]
keywords = ["electronics", "circuits", "circuitry", "simulation", "electricity"]
categories = ["no-std", "science", "simulation", "wasm", "embedded"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2", default-features = false }

no-std-compat = { version = "0.4", default-features = false, features = ["alloc"], optional = true }
libm = { version = "0.2", default-features = false, optional = true }
core-error = { version = "0.0", default-features = false, features = ["alloc"], optional = true }

uom = { version = "0.33.0", default-features = false, features = ["autoconvert", "f64", "si"] }

[features]
default = []
no_std = ["no-std-compat", "num-traits/libm", "core-error", "libm"]